@@ -1,9 +1,11 @@
 package bobo.commands.general;
 
 import bobo.Config;
+import bobo.utils.GoogleCustomSearchService;
 import com.github.ygimenez.method.Pages;
 import com.github.ygimenez.model.InteractPage;
 import com.github.ygimenez.model.Page;
+import com.google.api.services.customsearch.v1.model.Result;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
@@ -13,6 +15,9 @@ import net.dv8tion.jda.api.entities.Member;
 import net.dv8tion.jda.api.entities.MessageEmbed;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.Commands;
+import net.dv8tion.jda.api.interactions.commands.build.SubcommandData;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.awt.*;
 import java.net.URI;
@@ -25,7 +30,11 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 
+import static bobo.utils.StringUtils.markdownLink;
+
 public class GoogleCommand extends AbstractGeneral {
+    private static final Logger logger = LoggerFactory.getLogger(GoogleCommand.class);
+
     private static final String GOOGLE_API_KEY = Config.get("GOOGLE_API_KEY");
     private static final String SEARCH_ENGINE_ID = Config.get("SEARCH_ENGINE_ID");
 
@@ -34,60 +43,127 @@ public class GoogleCommand extends AbstractGeneral {
      */
     public GoogleCommand() {
         super(Commands.slash("google", "Searches given query on Google.")
-                .addOption(OptionType.STRING, "query", "What to search", true));
+                .addSubcommands(
+                        new SubcommandData("search", "Searches given query on Google.")
+                                .addOption(OptionType.STRING, "query", "What to search", true),
+                        new SubcommandData("images", "Searches for images on Google.")
+                                .addOption(OptionType.STRING, "query", "What to search", true)
+                )
+        );
     }
 
     @Override
     protected void handleGeneralCommand() {
         event.deferReply().queue();
-        int numPages;
-        JsonArray images;
+
+        String subcommand = event.getSubcommandName();
+
+        switch (subcommand) {
+            case "search" -> search();
+            case "images" -> searchImages();
+            default -> throw new IllegalArgumentException("Unexpected value: " + subcommand);
+        }
+    }
+
+    /**
+     * Searches the given query on Google.
+     */
+    private void search() {
         String query = Objects.requireNonNull(event.getOption("query")).getAsString();
-        String url = "https://www.googleapis.com/customsearch/v1?key=" + GOOGLE_API_KEY + "&cx=" + SEARCH_ENGINE_ID +
-                "&q=" + URLEncoder.encode(query, StandardCharsets.UTF_8) + "&searchType=image";
+        List<Result> results;
 
         try {
-            HttpClient client = HttpClient.newHttpClient();
-            HttpRequest request = HttpRequest.newBuilder().uri(URI.create(url)).build();
-            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-            JsonObject json = JsonParser.parseString(response.body()).getAsJsonObject();
-            images = json.getAsJsonArray("items");
-            numPages = images.size();
-            if (numPages == 0) {
+            results = GoogleCustomSearchService.search(query, false);
+            if (results == null || results.isEmpty()) {
+                hook.editOriginal("No results found for query: " + query).queue();
+                return;
+            }
+        } catch (Exception e) {
+            hook.editOriginal(e.getMessage()).queue();
+            logger.error("Error occurred while searching Google for query: {}", query);
+            return;
+        }
+
+        displayResults(results, query, false);
+    }
+
+    /**
+     * Searches for images on Google.
+     */
+    private void searchImages() {
+        String query = Objects.requireNonNull(event.getOption("query")).getAsString();
+        List<Result> images;
+
+        try {
+            images = GoogleCustomSearchService.search(query, true);
+            if (images == null || images.isEmpty()) {
                 hook.editOriginal("No images found for query: " + query).queue();
                 return;
             }
         } catch (Exception e) {
             hook.editOriginal(e.getMessage()).queue();
-            e.printStackTrace();
+            logger.error("Error occurred while searching Google Images for query: {}", query);
             return;
         }
 
+        displayResults(images, query, true);
+    }
+
+    /**
+     * Displays the search results in a paginated Discord embed.
+     *
+     * @param results       The search results.
+     * @param query         The search query.
+     * @param isImageSearch Whether the search is for images.
+     */
+    private void displayResults(List<Result> results, String query, boolean isImageSearch) {
         final List<Page> pages = new ArrayList<>();
-        MessageEmbed embed;
         Member member = event.getMember();
         assert member != null;
-        for (int i = 0; i < numPages; i++) {
-            JsonObject image = images.get(i).getAsJsonObject();
-            String title = image.get("title").getAsString();
-            String imageUrl = image.get("link").getAsString();
-            String imageContextUrl = image.getAsJsonObject().get("image").getAsJsonObject().get("contextLink").getAsString();
 
-            embed = new EmbedBuilder()
-                    .setAuthor(member.getUser().getGlobalName(), "https://discord.com/users/" + member.getId(), member.getEffectiveAvatarUrl())
-                    .setTitle("Search Results for: " + query)
-                    .setFooter("Page " + (i + 1) + "/" + numPages)
-                    .setColor(Color.red)
-                    .addField(title, imageContextUrl, true)
-                    .setImage(imageUrl)
-                    .build();
-            pages.add(i, InteractPage.of(embed));
+        if (isImageSearch) {
+            for (int i = 0; i < results.size(); i++) {
+                Result imageResult = results.get(i);
+                String title = imageResult.getTitle();
+                String imageUrl = imageResult.getLink();
+                String imageContextUrl = imageResult.getImage().getContextLink();
+
+                MessageEmbed embed = new EmbedBuilder()
+                        .setAuthor(member.getUser().getGlobalName(), "https://discord.com/users/" + member.getId(), member.getEffectiveAvatarUrl())
+                        .setTitle("Image Search Result for: " + query)
+                        .setFooter("Page " + (i + 1) + "/" + results.size())
+                        .setColor(Color.red)
+                        .addField(title, imageContextUrl, false)
+                        .setImage(imageUrl)
+                        .build();
+                pages.add(i, InteractPage.of(embed));
+            }
+        } else {
+            int resultsPerPage = 5;
+            for (int i = 0; i < results.size(); i += resultsPerPage) {
+                EmbedBuilder builder = new EmbedBuilder()
+                        .setAuthor(member.getUser().getGlobalName(), "https://discord.com/users/" + member.getId(), member.getEffectiveAvatarUrl())
+                        .setTitle("Search Results for: " + query)
+                        .setColor(Color.blue);
+
+                for (int j = 0; j < resultsPerPage && i + j < results.size(); j++) {
+                    Result searchResult = results.get(i + j);
+                    String title = searchResult.getTitle();
+                    String link = searchResult.getLink();
+                    String snippet = searchResult.getSnippet();
+
+                    builder.addField(title, markdownLink(snippet, link), false);
+                }
+
+                builder.setFooter("Page " + ((i / resultsPerPage) + 1) + "/" + ((results.size() + resultsPerPage - 1) / resultsPerPage));
+                pages.add(InteractPage.of(builder.build()));
+            }
         }
 
         if (pages.size() == 1) {
-            hook.editOriginalEmbeds((MessageEmbed) pages.get(0).getContent()).queue();
+            hook.editOriginalEmbeds((MessageEmbed) pages.getFirst().getContent()).queue();
         } else {
-            hook.editOriginalEmbeds((MessageEmbed) pages.get(0).getContent()).queue(success -> Pages.paginate(success, pages, true));
+            hook.editOriginalEmbeds((MessageEmbed) pages.getFirst().getContent()).queue(success -> Pages.paginate(success, pages, true));
         }
     }
 
